--- a/test.html
+++ b/test.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://www.youtube.com/watch?v=8ytfH7lykUA&pp=ygUQdG9nZXRoZXIgd2UgZ3Jvdw%3D%3D">
-    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="1;url=https://www.youtube.com/watch?v=8ytfH7lykUA&pp=ygUQdG9nZXRoZXIgd2UgZ3Jvdw%3D%3D">
+    <title>Website inladen...</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://www.youtube.com/watch?v=8ytfH7lykUA&pp=ygUQdG9nZXRoZXIgd2UgZ3Jvdw%3D%3D">click here</a>.</p>
+    <p>Als er niets gebeurd, <a href="https://www.youtube.com/watch?v=8ytfH7lykUA&pp=ygUQdG9nZXRoZXIgd2UgZ3Jvdw%3D%3D">Klik hier.</a>.</p>
 </body>
 </html>
