index aangepast met meer info

--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Website eigendom van Dagmar Schoenmakers. Copyright voorbehouden. Alleen voor privédoeleinden voor de opleiding kleuterjuf bij Thomas More.">
+    <meta name="author" content="Dagmar Schoenmakers">
+    <title>QR Dagmar Schoenmakers</title>
 </head>
 <body>
-    <h1>it works!</h1>
-    <h2>Dagmar i love you!!!!!</h2>
+    <header>
+        <h1>QR Code Redirector-Dagmar Schoenmakers</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Over deze website</h2>
+            <p>Deze website is eigendom van Dagmar Schoenmakers en is alleen bedoeld voor privédoeleinden voor de opleiding kleuterjuf bij Thomas More.</p>
+            <p>voor meer informatie kan u mij contacteren via r0893017@student.thomasmore.be .</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Dagmar Schoenmakers. Alle rechten voorbehouden.</p>
+    </footer>
 </body>
 </html>
