--- a/robot-stop.html
+++ b/robot-stop.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="1;url=XXXX">
+    <meta http-equiv="refresh" content="1;url=https://www.youtube.com/watch?v=w-nIfHThnmE">
     <title>Video inladen...</title>
 </head>
 <body>
-    <p>Als er niets gebeurd, <a href="XXXX">Klik hier.</a>.</p>
+    <p>Als er niets gebeurd, <a href="https://www.youtube.com/watch?v=w-nIfHThnmE">Klik hier.</a>.</p>
 </body>
 </html>
