test online brengen embedded YT

--- a/test.html
+++ b/test.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="1;url=https://www.youtube.com/watch?v=8ytfH7lykUA&pp=ygUQdG9nZXRoZXIgd2UgZ3Jvdw%3D%3D">
-    <title>Website inladen...</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TEST voor kleuters</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        iframe {
+            width: 100%;
+            height: 100vh; /* Hier wordt de hoogte van de viewport gebruikt */
+        }
+    </style>
 </head>
 <body>
-    <p>Als er niets gebeurd, <a href="https://www.youtube.com/watch?v=8ytfH7lykUA&pp=ygUQdG9nZXRoZXIgd2UgZ3Jvdw%3D%3D">Klik hier.</a>.</p>
+
+<!-- Plaats hier je iframe met de YouTube-video -->
+<iframe src="https://www.youtube-nocookie.com/embed/8ytfH7lykUA?autoplay=1&rel=0&modestbranding=1" frameborder="0" allowfullscreen></iframe>
+
 </body>
 </html>
