--- a/empty-embeddedYT.html
+++ b/empty-embeddedYT.html
@@ -26,10 +26,8 @@
 
 <!-- Plaats hier je iframe met de YouTube-video binnen een container -->
 <div class="video-container">
-    <iframe src="https://www.youtube-nocookie.com/embed/FU_0NF_jrgE?autoplay=1&rel=0&modestbranding=0" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube-nocookie.com/embed/8ytfH7lykUA?autoplay=1&rel=0&modestbranding=0" frameborder="0" allowfullscreen></iframe>
 </div>
 
 </body>
 </html>
-
-<!--https://www.youtube.com/watch?v=FU_0NF_jrgE-->
