--- a/garage-gust.html
+++ b/garage-gust.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="1;url=https://www.facebook.com/watch/?v=645409849631890">
-    <title>Video inladen...</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Audioboek op Youtube - Dagmar S</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        .video-container {
+            position: relative;
+            width: calc(100% - 60px); /* 30 pixels aan beide zijden */
+            height: calc(100% - 60px); /* 30 pixels aan de boven- en onderkant */
+            margin: 30px;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-    <p>Als er niets gebeurd, <a href="https://www.facebook.com/watch/?v=645409849631890">Klik hier.</a>.</p>
+
+<!-- Plaats hier je iframe met de YouTube-video binnen een container -->
+<div class="video-container">
+    <iframe src="https://www.youtube-nocookie.com/embed/Y9_KrOqnaLU?autoplay=1&rel=0&modestbranding=0" frameborder="0" allowfullscreen></iframe>
+</div>
+
 </body>
 </html>
+
+<!--https://www.facebook.com/watch/?v=645409849631890-->
+<!--https://youtu.be/Y9_KrOqnaLU--eigen upload prive-->
