--- a/kom-uit-ei.html
+++ b/kom-uit-ei.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="1;url=https://www.youtube.com/watch?v=IwYsifgO2BM">
-    <title>Video inladen...</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Audioboek op Youtube - Dagmar S</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        .video-container {
+            position: relative;
+            width: calc(100% - 60px); /* 30 pixels aan beide zijden */
+            height: calc(100% - 60px); /* 30 pixels aan de boven- en onderkant */
+            margin: 30px;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-    <p>Als er niets gebeurd, <a href="https://www.youtube.com/watch?v=IwYsifgO2BM">Klik hier.</a>.</p>
+
+<!-- Plaats hier je iframe met de YouTube-video binnen een container -->
+<div class="video-container">
+    <iframe src="https://www.youtube-nocookie.com/embed/IwYsifgO2BM?autoplay=1&rel=0&modestbranding=0" frameborder="0" allowfullscreen></iframe>
+</div>
+
 </body>
 </html>
+
+<!--https://www.youtube.com/watch?v=IwYsifgO2BM-->
