--- a/test.html
+++ b/test.html
@@ -10,16 +10,24 @@
             padding: 0;
             height: 100%;
         }
+        .video-container {
+            position: relative;
+            width: calc(100% - 60px); /* 30 pixels aan beide zijden */
+            height: calc(100% - 60px); /* 30 pixels aan de boven- en onderkant */
+            margin: 30px;
+        }
         iframe {
             width: 100%;
-            height: 100vh; /* Hier wordt de hoogte van de viewport gebruikt */
+            height: 100%;
         }
     </style>
 </head>
 <body>
 
-<!-- Plaats hier je iframe met de YouTube-video -->
-<iframe src="https://www.youtube-nocookie.com/embed/8ytfH7lykUA?autoplay=1&rel=0&modestbranding=1" frameborder="0" allowfullscreen></iframe>
+<!-- Plaats hier je iframe met de YouTube-video binnen een container -->
+<div class="video-container">
+    <iframe src="https://www.youtube-nocookie.com/embed/8ytfH7lykUA?autoplay=1&rel=0&modestbranding=0" frameborder="0" allowfullscreen></iframe>
+</div>
 
 </body>
 </html>
