--- a/thema-bij/save-the-bees.html
+++ b/thema-bij/save-the-bees.html
@@ -26,10 +26,10 @@
 
 <!-- Plaats hier je iframe met de YouTube-video binnen een container -->
 <div class="video-container">
-    <iframe src="https://www.youtube-nocookie.com/embed/AZERTYUIOP12345?autoplay=1&rel=0&modestbranding=0" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube-nocookie.com/embed/k24UiJmEjKY?autoplay=1&rel=0&modestbranding=0" frameborder="0" allowfullscreen></iframe>
 </div>
 
 </body>
 </html>
 
-<!--https://www.youtube.com/watch?v=AZERTYUIOP12345--> 
+<!--https://www.youtube.com/watch?v=k24UiJmEjKY--> 
