--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Website eigendom van Dagmar Schoenmakers. Copyright voorbehouden. Alleen voor privédoeleinden voor de opleiding kleuterjuf bij Thomas More.">
-    <meta name="author" content="Dagmar Schoenmakers">
-    <title>QR Dagmar Schoenmakers</title>
+    <meta name="description" content="Website eigendom van Dagmar S. Copyright voorbehouden. Alleen voor privédoeleinden.">
+    <meta name="author" content="Dagmar S">
+    <title>QRCODE Dagmar</title>
 </head>
 <body>
     <header>
@@ -13,12 +13,12 @@
     <main>
         <section>
             <h2>Over deze website</h2>
-            <p>Deze website is eigendom van Dagmar Schoenmakers en is alleen bedoeld voor privédoeleinden voor de opleiding kleuterjuf bij Thomas More.</p>
-            <p>voor meer informatie kan u mij contacteren via r0893017@student.thomasmore.be .</p>
+            <p>Deze website is eigendom van Dagmar Schoenmakers en is alleen bedoeld voor privédoeleinden .</p>
+            <p>voor meer informatie kan u mij contacteren.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Dagmar Schoenmakers. Alle rechten voorbehouden.</p>
+        <p>&copy; 2024 Dagmar S. Alle rechten voorbehouden.</p>
     </footer>
 </body>
 </html>
