--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <header>
-        <h1>QR Code Redirector-Dagmar Schoenmakers</h1>
+        <h1>QR Code Redirector-Dagmar S</h1>
     </header>
     <main>
         <section>
             <h2>Over deze website</h2>
-            <p>Deze website is eigendom van Dagmar Schoenmakers en is alleen bedoeld voor privédoeleinden .</p>
+            <p>Deze website is eigendom van Dagmar S. en is alleen bedoeld voor privédoeleinden .</p>
             <p>voor meer informatie kan u mij contacteren.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Dagmar S. Alle rechten voorbehouden.</p>
+        <p>&copy; 2025 Dagmar S. Alle rechten voorbehouden.</p>
     </footer>
 </body>
 </html>
