--- a/index.html
+++ b/index.html
@@ -1,24 +1,11 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Website eigendom van Dagmar S. Copyright voorbehouden. Alleen voor privédoeleinden.">
-    <meta name="author" content="Dagmar S">
-    <title>QRCODE Dagmar</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Daggy.be</title>
 </head>
 <body>
-    <header>
-        <h1>QR Code Redirector-Dagmar S</h1>
-    </header>
-    <main>
-        <section>
-            <h2>Over deze website</h2>
-            <p>Deze website is eigendom van Dagmar S. en is alleen bedoeld voor privédoeleinden .</p>
-            <p>voor meer informatie kan u mij contacteren.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Dagmar S. Alle rechten voorbehouden.</p>
-    </footer>
+    <img src="afbeelding_index.jpg" alt="">
 </body>
 </html>
