--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daggy.be</title>
     <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
         img {
-            max-width: 100%;
-            height: auto;
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Past zich aan zonder vervorming */
             display: block;
-            margin: 0 auto; /* Optioneel: centreren */
         }
     </style>
 </head>
+
 
 <body>
     <img src="afbeelding_index.jpg" alt="">
